--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8080
 
 springdoc.api-docs.path=/docs-specs
