--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
 
+spring.data.mongodb.uri=mongodb+srv://user1:pass@cluster0.yivr2.mongodb.net/invoices?retryWrites=true&w=majority
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=create-drop
-server.port=8080
 
 springdoc.api-docs.path=/docs-specs
